# pyshop

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  pytest.yml
pyshop/: __init__.py  shop_runner.py
pyshop/examples/: ascii.py  basic.py  junction.py  py_test_commands.txt  stochastic.py  test_commands.txt  test_data.ascii  test_model.ascii  test_time.ascii
pyshop/helpers/: commands.py  time.py  timeseries.py  typing_annotations.py
pyshop/lp_model/: __init__.py  index.py  lp_model.py  row.py  var.py
pyshop/shopcore/: command_builder.py  model_builder.py  script_generator.py  shop_api.py  shop_rest.py
pyshop/tests/: test_rest_client.py  test_shop_api.py
pyshop/tests/models/: basic_model.yaml
tests/: test_helpers_command.py  test_helpers_time.py  test_shop_api.py
