[tool.poetry]
name = "sintef-pyshop"
packages = [
    {include = "pyshop"}
]
version = "1.1.0"
description = "The nicest python interface to SHOP"
authors = ["SINTEF Energy Research <support.energy@sintef.no>"]
license = "MIT"
homepage = "http://www.sintef.no/programvare/SHOP"
repository = "https://github.com/sintef-energy/pyshop"
documentation = "https://shop.sintef.energy/documentation/tutorials/pyshop/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
numpy = "^1.22.3"
graphviz = "^0.19.1"
pybind11 = "^2.9.1"
requests = "^2.27.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
